[package]
name = "cozy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {features = ["string"], version = "4.5.4"}
anyhow = "1.0.82"
indoc = "2.0.5"
miette = "7.2.0"
serde_json = { version = "1.0.116", features = ["alloc"] }

[dev-dependencies]
