[package]
name = "cozy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {features = ["string"], version = "4.5.4"}
anyhow = "1.0.82"
indoc = "2.0.5"
miette = "7.2.0"
serde_json = { version = "1.0.116", features = ["alloc", "std"] }
duct = "0.13.7"
itertools = "0.12.1"
ocaml = {git = "https://github.com/zshipko/ocaml-rs"}
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json", "stream"] }
scraper = "0.19.0"
rayon = "1.10.0"
octocrab = "0.38.0"
base64 = "0.22.0"
opam-file-rs = "0.1.5"
futures-util = "0.3.30"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]
ocaml-build = {git = "https://github.com/zshipko/ocaml-rs", features=["dune"]}

[dev-dependencies]
